add customers + team adaptive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="nav">
           <a href="./index.html" class="logo"
@@ -54,18 +54,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main class="main">
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" data-modal-open type="button">
             Order Service
           </button>
         </div>
-      </section>
-      <section class="features section">
+      </section> -->
+      <!-- <section class="features section">
         <div class="container">
           <h2 class="features-title visually-hidden">Our Features</h2>
           <ul class="features-list list">
@@ -119,8 +119,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="about section">
+      </section> -->
+      <!-- <section class="about section">
         <div class="container">
           <h2 class="about-title title">What are we doing</h2>
           <ul class="about-list list">
@@ -153,9 +153,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="team section">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -342,7 +342,7 @@
         </div>
       </section>
       <section class="customers section">
-        <div class="container">
+        <div class="container customers-container">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
@@ -392,7 +392,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-margin">
           <a href="./index.html" class="footer-logo"
@@ -456,7 +456,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
