--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
       </section> -->
       <section class="team section">
-        <div class="container team-container">
+        <div class="container mini-container">
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -342,7 +342,7 @@
         </div>
       </section>
       <section class="customers section">
-        <div class="container customers-container">
+        <div class="container">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
