--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
       </section> -->
       <section class="team section">
-        <div class="container mini-container">
+        <div class="container">
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
