--- a/index.html
+++ b/index.html
@@ -21,12 +21,51 @@
     <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
-    <!-- <header class="header">
-      <div class="container header-container">
-        <nav class="nav">
+    <header class="header">
+      <div class="container">
+        <div class="mob-header">
           <a href="./index.html" class="logo"
             ><span class="accent">Web</span>Studio</a
           >
+          <button type="button" class="menu-open-btn"></button>
+        </div>
+        <div class="header-content">
+          <nav class="nav">
+            <a href="./index.html" class="logo"
+              ><span class="accent">Web</span>Studio</a
+            >
+            <ul class="nav-list list">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link current"
+                  ><span class="current-page">Studio</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./portfolio.html" class="nav-link">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="address">
+            <ul class="address-list list">
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="address-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+110001111111" class="address-link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+      <div class="mob-menu">
+        <div class="container">
           <ul class="nav-list list">
             <li class="nav-item">
               <a href="./index.html" class="nav-link current"
@@ -36,36 +75,24 @@
             <li class="nav-item">
               <a href="./portfolio.html" class="nav-link">Portfolio</a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Contacts</a></li>
-          </ul>
-        </nav>
-        <address class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a href="tel:+110001111111" class="address-link"
-                >+11 (000) 111-11-11</a
-              >
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contacts</a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
-    </header> -->
+    </header>
 
     <main class="main">
-      <!-- <section class="hero section">
-        <div class="container">
+      <section class="hero section">
+        <div class="container mini">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" data-modal-open type="button">
             Order Service
           </button>
         </div>
-      </section> -->
-      <!-- <section class="features section">
+      </section>
+      <section class="features section">
         <div class="container">
           <h2 class="features-title visually-hidden">Our Features</h2>
           <ul class="features-list list">
@@ -75,8 +102,8 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Strategy</h3>
-              <p class="section-description">
+              <h3 class="section-subtitle features-subtitle">Strategy</h3>
+              <p class="section-description features-description">
                 Our goal is to identify the businessproblem to walk away with
                 the perfect and creative solution.
               </p>
@@ -87,8 +114,8 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Punctuality</h3>
-              <p class="section-description">
+              <h3 class="section-subtitle features-subtitle">Punctuality</h3>
+              <p class="section-description features-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -99,8 +126,8 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Diligence</h3>
-              <p class="section-description">
+              <h3 class="section-subtitle features-subtitle">Diligence</h3>
+              <p class="section-description features-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -111,16 +138,16 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="section-subtitle">Technologies</h3>
-              <p class="section-description">
+              <h3 class="section-subtitle features-subtitle">Technologies</h3>
+              <p class="section-description features-description">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="about section">
+      </section>
+      <section class="about section">
         <div class="container">
           <h2 class="about-title title">What are we doing</h2>
           <ul class="about-list list">
@@ -153,13 +180,14 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="team section">
-        <div class="container">
+        <div class="container mini">
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img
+                srcset="./images/img.jpg 1x, ./images/img-2x.jpg 2x"
                 class="team-img"
                 src="./images/img.jpg"
                 alt="human-photo"
@@ -205,6 +233,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/img1.jpg 1x, ./images/img-1-2x.jpg 2x"
                 class="team-img"
                 src="./images/img1.jpg"
                 alt="human-photo"
@@ -250,6 +279,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/img2.jpg 1x, ./images/img-2-2x.jpg 2x"
                 class="team-img"
                 src="./images/img2.jpg"
                 alt="human-photo"
@@ -295,6 +325,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/img3.jpg 1x, ./images/img-3-2x.jpg 2x"
                 class="team-img"
                 src="./images/img3.jpg"
                 alt="human-photo"
@@ -342,7 +373,7 @@
         </div>
       </section>
       <section class="customers section">
-        <div class="container">
+        <div class="container mini">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
@@ -392,71 +423,75 @@
       </section>
     </main>
 
-    <!-- <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-logo-margin">
-          <a href="./index.html" class="footer-logo"
-            ><span class="accent">Web</span>Studio</a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-soc-margin">
-          <h2 class="footer-soc-title">Social media</h2>
-          <ul class="footer-soc-list list">
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
-                <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+    <footer class="footer">
+      <div class="container mini">
+        <div class="footer-wrap">
+          <div class="footer-tab-wrap">
+            <div class="footer-logo-container">
+              <a href="./index.html" class="footer-logo"
+                ><span class="accent">Web</span>Studio</a
+              >
+              <p class="footer-text">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+            </div>
+            <div class="footer-soc-container">
+              <h2 class="footer-soc-title">Social media</h2>
+              <ul class="footer-soc-list list">
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link">
+                    <svg class="soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link">
+                    <svg class="soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link">
+                    <svg class="soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="footer-soc-item">
+                  <a href="" class="footer-soc-link">
+                    <svg class="soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-form-container">
+            <h2 class="footer-form-title">Subscribe</h2>
+            <form class="footer-form">
+              <input
+                type="email"
+                name="sub-email"
+                id="sub-email"
+                placeholder="E-mail"
+                class="footer-input"
+                required
+              />
+              <button type="submit" class="footer-form-btn">
+                Subscribe
+                <svg class="sub-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-subscribe"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
-                <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
-                <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
-                <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h2 class="footer-form-title">Subscribe</h2>
-          <form class="footer-form">
-            <input
-              type="email"
-              name="sub-email"
-              id="sub-email"
-              placeholder="E-mail"
-              class="footer-input"
-              required
-            />
-            <button type="submit" class="footer-form-btn">
-              Subscribe
-              <svg class="sub-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-subscribe"></use>
-              </svg>
-            </button>
-          </form>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
