--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
           <a href="./index.html" class="logo"
             ><span class="accent">Web</span>Studio</a
           >
-          <button type="button" class="menu-open-btn"></button>
+          <button type="button" class="menu-open-btn" data-menu-open>
+            <svg class="menu-open-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-mob-menu-open"></use>
+            </svg>
+          </button>
         </div>
         <div class="header-content">
           <nav class="nav">
@@ -56,29 +60,82 @@
                 >
               </li>
               <li class="address-item">
-                <a href="tel:+110001111111" class="address-link"
+                <a
+                  href="tel:+110001111111"
+                  class="address-link address-absolute-link"
                   >+11 (000) 111-11-11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-      </div>
-      <div class="mob-menu">
-        <div class="container">
-          <ul class="nav-list list">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link current"
-                ><span class="current-page">Studio</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Contacts</a>
-            </li>
-          </ul>
+        <div class="mob-menu is-hidden" data-menu>
+          <div class="container">
+            <button type="button" class="menu-close" data-menu-close>
+              <svg class="close-button-svg" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-button"></use>
+              </svg>
+            </button>
+            <nav>
+              <ul class="menu-list list">
+                <li class="menu-item">
+                  <a href="" class="menu-item-link link">Studio</a>
+                </li>
+                <li class="menu-item">
+                  <a href="" class="menu-item-link link">Portfolio</a>
+                </li>
+                <li class="menu-item">
+                  <a href="" class="menu-item-link link">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="menu-wrap">
+              <address class="address">
+                <ul class="menu-address-list list">
+                  <li class="menu-address-item">
+                    <a href="tel:+110001111111" class="menu-tel link"
+                      >+11 (000) 111-11-11</a
+                    >
+                  </li>
+                  <li class="menu-address-item">
+                    <a href="mailto:info@devstudio.com" class="menu-mail link"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+              </address>
+              <ul class="menu-soc-list list">
+                <li class="menu-soc-item">
+                  <a href="" class="menu-soc-link">
+                    <svg class="menu-soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="menu-soc-item">
+                  <a href="" class="menu-soc-link">
+                    <svg class="menu-soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="menu-soc-item">
+                  <a href="" class="menu-soc-link">
+                    <svg class="menu-soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="menu-soc-item">
+                  <a href="" class="menu-soc-link">
+                    <svg class="menu-soc-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -578,5 +635,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
