--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <nav>
               <ul class="menu-list list">
                 <li class="menu-item">
-                  <a href="" class="menu-item-link link">Studio</a>
+                  <a href="" class="menu-item-link link accent">Studio</a>
                 </li>
                 <li class="menu-item">
                   <a href="" class="menu-item-link link">Portfolio</a>
@@ -210,6 +210,10 @@
           <ul class="about-list list">
             <li class="about-item">
               <img
+                srcset="
+                  ./images/Rectangle71.jpg    1x,
+                  ./images/Rectangle71-2x.jpg 2x
+                "
                 class="about-img"
                 src="./images/Rectangle71.jpg"
                 alt="photo"
@@ -219,6 +223,10 @@
             </li>
             <li class="about-item">
               <img
+                srcset="
+                  ./images/Rectangle71s.jpg    1x,
+                  ./images/Rectangle71s-2x.jpg 2x
+                "
                 class="about-img"
                 src="./images/Rectangle71s.jpg"
                 alt="photo"
@@ -228,6 +236,10 @@
             </li>
             <li class="about-item">
               <img
+                srcset="
+                  ./images/Rectangle71ss.jpg    1x,
+                  ./images/Rectangle71ss-2x.jpg 2x
+                "
                 class="about-img"
                 src="./images/Rectangle71ss.jpg"
                 alt="photo"
@@ -239,7 +251,7 @@
         </div>
       </section>
       <section class="team section">
-        <div class="container mini">
+        <div class="container">
           <h2 class="team-title title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -430,7 +442,7 @@
         </div>
       </section>
       <section class="customers section">
-        <div class="container mini">
+        <div class="container">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
@@ -481,7 +493,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container mini">
+      <div class="container">
         <div class="footer-wrap">
           <div class="footer-tab-wrap">
             <div class="footer-logo-container">
